<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GestionesActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GestionesActivity">

        <Button
            android:id="@+id/gestionar_user"
            android:layout_width="140dp"
            android:layout_height="79dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:text="@string/gestiones_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.018" />

        <Button
            android:id="@+id/gestionar_empresa"
            android:layout_width="140dp"
            android:layout_height="79dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="30dp"
            android:text="@string/gestionar_empresas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/gestionar_ubicacion"
            android:layout_width="140dp"
            android:layout_height="79dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="496dp"
            android:text="@string/gestionar_ubicaciones"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gestionar_user"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
